Fix redundancy issue in Terms of Use & Privacy Policy page on mobile (bug 1180428)

--- a/src/media/css/header.styl
+++ b/src/media/css/header.styl
@@ -229,6 +229,11 @@ body > .banners mkt-banner {
     }
 }
 
+[data-page-type~="leaf"] .subheader,
+[data-page-type~="leaf"] .secondary-header {
+    display: none;
+}
+
 .secondary-header,
 .featured-header {
     position: relative;
@@ -440,6 +445,13 @@ body > .banners mkt-banner {
         +rtl() {
             flex-direction: row;
         }
+    }
+}
+
+@media $wide-tablet {
+    [data-page-type~="leaf"] .subheader,
+    [data-page-type~="leaf"] .secondary-header {
+        display: block;
     }
 }
 
